# wisemen-wagtail-core

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements-ci.txt  requirements-dev.txt  setup.py
wisemen/: email.py
wisemen/adaptors/: __init__.py  account_adaptor.py
wisemen/contrib/multilingual_sitemap/: __init__.py  apps.py  sitemap_generator.py  urls.py  views.py
wisemen/contrib/multilingual_sitemap/templates/: sitemap_alternates.xml
wisemen/contrib/redirect/: api.py  apps.py  urls.py
wisemen/contrib/rest_framework_simplejwt_with_grace_period/: apps.py
wisemen/contrib/rest_framework_simplejwt_with_grace_period/mixins/: blacklist.py
wisemen/contrib/rest_framework_simplejwt_with_grace_period/models/: refresh.py
wisemen/contrib/rest_framework_simplejwt_with_grace_period/serializers/: __init__.py  token_refresh.py
wisemen/email_backends/: __init__.py  mailgun.py
wisemen/fields/: multiple_choice_array.py
wisemen/helpers/: image_renditions.py
wisemen/middleware/: csrf.py
wisemen/migrations/: 0001_initial.py
wisemen/models/: __init__.py  site_settings.py
wisemen/panels/: seo.py
wisemen/serializers/: image.py
wisemen/settings/: project_env  project_settings.py  settings.py  urls.py
wisemen/signals/: __init__.py  image_renditions.py
wisemen/storage_backends/: private.py
wisemen/templates/account/email/: email_confirmation_signup_en.html  password_reset_key_en.html
wisemen/templates/wagtailadmin/: 404.html  admin_base.html  base.html  home.html  login.html
wisemen/views/: logout_view.py
